<resources>
    <string name="app_name">Assign task</string>
    <string name="tab_text_1">Tasks</string>
    <string name="tab_text_2">Todo Tasks</string>
    <string name="tab_text_3">Done Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">359529887955644</string>
    <string name="fb_login_protocol_scheme">fb359529887955644</string>

    <string name="header_login">Login</string>
    <string name="header_create">Create</string>
    <string name="btn_create">Create account.</string>
    <string name="header_create_account">Create it!</string>
    <string name="hint_text_username">Username</string>
    <string name="hint_text_fullname">Full name</string>
    <string name="hint_text_password">Password</string>
    <string name="hint_text_age">Birth day</string>

    <string name="btn_back">Back</string>
    <string name="btn_login">Login</string>
</resources>
